--- a/client/app/src/main/res/layout/list_item_count.xml
+++ b/client/app/src/main/res/layout/list_item_count.xml
@@ -2,19 +2,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/list_item_crime_solvedCheckBox"
-        android:layout_alignParentTop="false"
-        android:layout_alignParentLeft="false"
-        android:layout_alignParentStart="false"
-        android:enabled="true"
-        android:gravity="center"
-        android:layout_alignParentRight="true"
-        android:padding="4dp"
-        android:focusable="false"
-        android:text="@string/crime_solved_label"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -22,19 +9,17 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textStyle="bold"
         android:id="@+id/list_item_crime_titleTextView"
-        android:layout_toLeftOf="@+id/list_item_crime_solvedCheckBox"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:text="Crime title."/>
+        android:text="@string/bank_name"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Crime Date."
+        android:text="@string/balance"
         android:id="@+id/list_item_crime_dataTextView"
         android:layout_below="@+id/list_item_crime_titleTextView"
-        android:layout_toLeftOf="@+id/list_item_crime_solvedCheckBox"
         android:paddingLeft="4dp"
         android:paddingTop="4dp"
         android:paddingRight="4dp"
