--- a/client/app/src/main/res/layout/fragment_count.xml
+++ b/client/app/src/main/res/layout/fragment_count.xml
@@ -1,45 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
+        android:id="@+id/textView"
+        style="?android:listSeparatorTextViewStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/bank_name"
-        android:id="@+id/textView"
         android:layout_gravity="center_horizontal"
-        style="?android:listSeparatorTextViewStyle" />
+        android:text="@string/bank_name"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <EditText
+        android:id="@+id/count_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:id="@+id/count_title"
         android:layout_gravity="center_horizontal"
-        android:hint="@string/crime_title_hint" />
+        android:hint="@string/crime_title_hint"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
+        android:id="@+id/textView2"
+        style="?android:listSeparatorTextViewStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/balance"
-        android:id="@+id/textView2"
         android:layout_gravity="center_horizontal"
-        style="?android:listSeparatorTextViewStyle" />
+        android:text="@string/balance"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <Button
+        android:id="@+id/crime_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/crime_date"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp" />
 
-    <CheckBox
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/crime_solved_label"
-        android:id="@+id/crime_solved"
-        android:layout_marginLeft="30dp" />
 </LinearLayout>
