--- a/client/app/src/main/res/layout-land/fragment_count.xml
+++ b/client/app/src/main/res/layout-land/fragment_count.xml
@@ -18,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:hint="@string/crime_title_hint"
+        android:hint="@string/count_name"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
@@ -40,7 +40,7 @@
         android:weightSum="1">
 
         <Button
-            android:id="@+id/crime_date"
+            android:id="@+id/count_balance_field"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
