--- a/client/app/src/main/res/layout/fragment_count.xml
+++ b/client/app/src/main/res/layout/fragment_count.xml
@@ -18,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:hint="@string/crime_title_hint"
+        android:hint="@string/count_name"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
@@ -30,11 +30,14 @@
         android:text="@string/balance"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <Button
-        android:id="@+id/crime_date"
-        android:layout_width="match_parent"
+    <EditText
+        android:id="@+id/count_balance_field"
+        android:layout_width="232dp"
         android:layout_height="wrap_content"
+        android:inputType="numberDecimal"
+        android:ems="10"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp" />
+        android:layout_marginRight="16dp"
+        android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
