--- a/client/app/src/main/res/menu-v11/fragment_count_list.xml
+++ b/client/app/src/main/res/menu-v11/fragment_count_list.xml
@@ -6,7 +6,7 @@
         android:id="@+id/menu_item_new_count"
         android:icon="@drawable/ic_menu_add"
         android:orderInCategory="100"
-        android:title="@string/new_crime"
+        android:title="@string/new_count"
         app:showAsAction="ifRoom|withText" />
     <item android:id="@+id/menu_item_show_subtitle"
         android:title="@string/show_subtitle"
