--- a/client/app/src/main/res/menu/count_list_item_context.xml
+++ b/client/app/src/main/res/menu/count_list_item_context.xml
@@ -3,6 +3,6 @@
     <item
         android:id="@+id/menu_item_delete_count"
         android:icon="@drawable/ic_menu_delete"
-        android:title="@string/delete_crime"/>
+        android:title="@string/delete_count"/>
 
 </menu>
